adding modifications to the SQL code to add transactiondate column from predictions_2017

--- a/scaling_exercises.ipynb
+++ b/scaling_exercises.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "a305f52e",
    "metadata": {},
    "outputs": [],
@@ -46,6 +46,184 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "927a2251",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bedroomcnt</th>\n",
+       "      <th>bathroomcnt</th>\n",
+       "      <th>indoor_squarefeet</th>\n",
+       "      <th>taxvalue</th>\n",
+       "      <th>yearbuilt</th>\n",
+       "      <th>taxamount</th>\n",
+       "      <th>fips</th>\n",
+       "      <th>transactiondate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3100</td>\n",
+       "      <td>1023282</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>11013.72</td>\n",
+       "      <td>6059</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1465</td>\n",
+       "      <td>464000</td>\n",
+       "      <td>1967</td>\n",
+       "      <td>5672.48</td>\n",
+       "      <td>6111</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1243</td>\n",
+       "      <td>564778</td>\n",
+       "      <td>1962</td>\n",
+       "      <td>6488.30</td>\n",
+       "      <td>6059</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2376</td>\n",
+       "      <td>145143</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>1777.51</td>\n",
+       "      <td>6037</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2962</td>\n",
+       "      <td>773303</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>9516.26</td>\n",
+       "      <td>6037</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   bedroomcnt  bathroomcnt  indoor_squarefeet  taxvalue  yearbuilt  taxamount  \\\n",
+       "0           4          3.5               3100   1023282       1998   11013.72   \n",
+       "1           2          1.0               1465    464000       1967    5672.48   \n",
+       "2           3          2.0               1243    564778       1962    6488.30   \n",
+       "3           4          3.0               2376    145143       1970    1777.51   \n",
+       "4           4          3.0               2962    773303       1950    9516.26   \n",
+       "\n",
+       "   fips transactiondate  \n",
+       "0  6059      2017-01-01  \n",
+       "1  6111      2017-01-01  \n",
+       "2  6059      2017-01-01  \n",
+       "3  6037      2017-01-01  \n",
+       "4  6037      2017-01-01  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "houses.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b82d351c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 52301 entries, 0 to 52441\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   bedroomcnt         52301 non-null  int64  \n",
+      " 1   bathroomcnt        52301 non-null  float64\n",
+      " 2   indoor_squarefeet  52301 non-null  int64  \n",
+      " 3   taxvalue           52301 non-null  int64  \n",
+      " 4   yearbuilt          52301 non-null  int64  \n",
+      " 5   taxamount          52301 non-null  float64\n",
+      " 6   fips               52301 non-null  int64  \n",
+      " 7   transactiondate    52301 non-null  object \n",
+      "dtypes: float64(2), int64(5), object(1)\n",
+      "memory usage: 3.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "houses.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2f6caafa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_validate_test_split(houses, seed=175):\n",
+    "    '''\n",
+    "    This function takes in a dataframe (DF) and an integer for setting a seed\n",
+    "    and splits the data into train, validate and test. \n",
+    "    Test is 20% of the original dataset, validate is .30*.80= 24% of the \n",
+    "    original dataset, and train is .70*.80= 56% of the original dataset. \n",
+    "    The function returns train, validate and test DF. \n",
+    "    '''\n",
+    "    train_validate, test = train_test_split(houses, test_size=0.2, \n",
+    "                                            random_state=seed)\n",
+    "    train, validate = train_test_split(train_validate, test_size=0.3, \n",
+    "                                       random_state=seed)\n",
+    "    return train, validate, test\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ac3712e6",
    "metadata": {},
    "outputs": [
     {
@@ -80,122 +258,153 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>263093</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>820</td>\n",
+       "      <td>213245</td>\n",
+       "      <td>1923</td>\n",
+       "      <td>2612.07</td>\n",
+       "      <td>6037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2147138</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1558</td>\n",
+       "      <td>457000</td>\n",
+       "      <td>1954</td>\n",
+       "      <td>4039.32</td>\n",
+       "      <td>6037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1837837</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1175</td>\n",
+       "      <td>60502</td>\n",
+       "      <td>1952</td>\n",
+       "      <td>940.98</td>\n",
+       "      <td>6059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025105</th>\n",
        "      <td>4</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3633</td>\n",
-       "      <td>296425</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>6941.39</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2843</td>\n",
+       "      <td>174749</td>\n",
+       "      <td>1963</td>\n",
+       "      <td>2430.81</td>\n",
        "      <td>6037</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>3</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1620</td>\n",
-       "      <td>847770</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>10244.94</td>\n",
+       "      <th>1116049</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2923</td>\n",
+       "      <td>798893</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>9322.08</td>\n",
        "      <td>6037</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>544822</th>\n",
        "      <td>3</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>2077</td>\n",
-       "      <td>646760</td>\n",
+       "      <td>1376</td>\n",
+       "      <td>133795</td>\n",
+       "      <td>1946</td>\n",
+       "      <td>2049.37</td>\n",
+       "      <td>6037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>853671</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1804</td>\n",
+       "      <td>970960</td>\n",
        "      <td>1926</td>\n",
-       "      <td>7924.68</td>\n",
+       "      <td>11683.62</td>\n",
        "      <td>6037</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1200</td>\n",
-       "      <td>5328</td>\n",
-       "      <td>1972</td>\n",
-       "      <td>91.60</td>\n",
+       "      <th>682861</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1689</td>\n",
+       "      <td>605170</td>\n",
+       "      <td>1976</td>\n",
+       "      <td>7295.05</td>\n",
        "      <td>6037</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>171</td>\n",
-       "      <td>6920</td>\n",
-       "      <td>1973</td>\n",
-       "      <td>255.17</td>\n",
+       "      <th>1699142</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>2041</td>\n",
+       "      <td>265781</td>\n",
+       "      <td>1957</td>\n",
+       "      <td>3193.16</td>\n",
+       "      <td>6059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>465717</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>876</td>\n",
+       "      <td>218794</td>\n",
+       "      <td>1947</td>\n",
+       "      <td>3348.40</td>\n",
        "      <td>6037</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1198258 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    bedroomcnt  bathroomcnt  indoor_squarefeet  taxvalue  yearbuilt  \\\n",
-       "4            4          2.0               3633    296425       2005   \n",
-       "6            3          4.0               1620    847770       2011   \n",
-       "7            3          2.0               2077    646760       1926   \n",
-       "11           0          0.0               1200      5328       1972   \n",
-       "14           0          0.0                171      6920       1973   \n",
+       "         bedroomcnt  bathroomcnt  indoor_squarefeet  taxvalue  yearbuilt  \\\n",
+       "263093            2          1.0                820    213245       1923   \n",
+       "2147138           3          2.0               1558    457000       1954   \n",
+       "1837837           3          1.0               1175     60502       1952   \n",
+       "2025105           4          3.0               2843    174749       1963   \n",
+       "1116049           5          3.0               2923    798893       1995   \n",
+       "...             ...          ...                ...       ...        ...   \n",
+       "544822            3          2.0               1376    133795       1946   \n",
+       "853671            3          2.0               1804    970960       1926   \n",
+       "682861            3          2.0               1689    605170       1976   \n",
+       "1699142           4          2.5               2041    265781       1957   \n",
+       "465717            2          1.0                876    218794       1947   \n",
        "\n",
-       "    taxamount  fips  \n",
-       "4     6941.39  6037  \n",
-       "6    10244.94  6037  \n",
-       "7     7924.68  6037  \n",
-       "11      91.60  6037  \n",
-       "14     255.17  6037  "
+       "         taxamount  fips  \n",
+       "263093     2612.07  6037  \n",
+       "2147138    4039.32  6037  \n",
+       "1837837     940.98  6059  \n",
+       "2025105    2430.81  6037  \n",
+       "1116049    9322.08  6037  \n",
+       "...            ...   ...  \n",
+       "544822     2049.37  6037  \n",
+       "853671    11683.62  6037  \n",
+       "682861     7295.05  6037  \n",
+       "1699142    3193.16  6059  \n",
+       "465717     3348.40  6037  \n",
+       "\n",
+       "[1198258 rows x 7 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "houses.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "2f6caafa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train_validate_test_split(houses, seed=175):\n",
-    "    '''\n",
-    "    This function takes in a dataframe (DF) and an integer for setting a seed\n",
-    "    and splits the data into train, validate and test. \n",
-    "    Test is 20% of the original dataset, validate is .30*.80= 24% of the \n",
-    "    original dataset, and train is .70*.80= 56% of the original dataset. \n",
-    "    The function returns train, validate and test DF. \n",
-    "    '''\n",
-    "    train_validate, test = train_test_split(df, test_size=0.2, \n",
-    "                                            random_state=seed)\n",
-    "    train, validate = train_test_split(train_validate, test_size=0.3, \n",
-    "                                       random_state=seed)\n",
-    "    return train, validate, test\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "ac3712e6",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'x' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/5k/zptdym41293159jft7y2b6cm0000gp/T/ipykernel_65502/3331524160.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx_train_and_validate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m175\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_validate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train_and_validate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
-     ]
     }
    ],
    "source": [
