adding changes to the wrangle file

--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "fa9a50ba",
+   "id": "260707cb",
    "metadata": {
     "scrolled": true
    },
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "b0e5b919",
+   "id": "da0e793d",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "17861f2e",
+   "id": "a5c52c75",
    "metadata": {
     "scrolled": false
    },
@@ -1197,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "8307baea",
+   "id": "101c13db",
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1387,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "cd197de4",
+   "id": "6f6ffb7b",
    "metadata": {
     "scrolled": false
    },
@@ -1713,7 +1713,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "cf89c26c",
+   "id": "571ffbef",
    "metadata": {},
    "outputs": [
     {
@@ -1740,7 +1740,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "6412e4cc",
+   "id": "bdb2efb9",
    "metadata": {
     "scrolled": false
    },
@@ -1769,7 +1769,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "5a70782b",
+   "id": "97b61c45",
    "metadata": {},
    "outputs": [
     {
@@ -1879,7 +1879,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "8f64e19f",
+   "id": "fef0815b",
    "metadata": {},
    "outputs": [
     {
@@ -1904,7 +1904,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "1a36a779",
+   "id": "9bef867d",
    "metadata": {},
    "outputs": [
     {
@@ -1929,7 +1929,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "eb1e2e6d",
+   "id": "7a336d64",
    "metadata": {
     "scrolled": false
    },
@@ -1956,7 +1956,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "e41841b8",
+   "id": "452a9c9e",
    "metadata": {},
    "outputs": [
     {
@@ -1981,7 +1981,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "b8d3972c",
+   "id": "4995e640",
    "metadata": {},
    "outputs": [
     {
@@ -2006,7 +2006,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "eca109a8",
+   "id": "06527259",
    "metadata": {},
    "outputs": [
     {
@@ -2031,7 +2031,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "f6ddbc20",
+   "id": "0fa85e27",
    "metadata": {
     "collapsed": true
    },
@@ -2064,24 +2064,33 @@
     "## Takeaways\n",
     "* There are a lot of outliers for tax_value proportionally to the other columns\n",
     "* Each column contains in itself a lot of outliers\n",
-    "* Yearbuilt and fips can be kept the way they are because their outliers bring more information about the potential price of a house than they disturb the homogeneity of the data\n",
+    "* Yearbuilt and fips can be kept the way they are because their outliers bring more information about the potential price of a house than they disturb the homogeneity of the data (price of a very old house vs that of a new one, difference of price depending on county...)\n",
     "* 0 bedroom, 0 bathroom, and 1 squarefoot are not too significant (57 and 41 entries but it exist in real estate)\n",
-    "* The tax_value outliers are not a problem because it is the target variable"
+    "* The tax_value outliers are not a problem because it is the target variable\n",
+    "* After tax_value, tax_amount has the most outliers\n",
+    "* Handle outliers in tax_amount, bedrooms, bathrooms, and indoor_sqft\n",
+    "\n",
+    "\n",
+    "- My objective is to taget houses that are the closest to the average american house. For that I will:\n",
+    "    * set the limits of bedrooms to 8\n",
+    "    * set the limits of bathrooms to 8\n",
+    "    * set the limit of indoor_sqft to 20_000 sqft\n",
+    "    * set the limit of the tax_amount as a function of sqftage (to what tax_amount corresponds a house with indoor 20_000 sqft?)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 130,
    "id": "b772488b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9997724548939719"
+       "0.9997132808318678"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2089,22 +2098,22 @@
    "source": [
     "# The proportion of houses that have 8 bedrooms and less\n",
     "\n",
-    "houses[houses.bedroomcnt <= 8].shape[0] / houses.shape[0]"
+    "houses[houses.bedrooms <= 8].shape[0] / houses.shape[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 131,
    "id": "dd5dd06c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9996612521522169"
+       "0.9995221347197798"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2112,22 +2121,22 @@
    "source": [
     "# The proportion of houses that have 8 bathrooms and less\n",
     "\n",
-    "houses[houses.bathroomcnt <= 9].shape[0] / houses.shape[0]"
+    "houses[houses.bathrooms <= 8].shape[0] / houses.shape[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 132,
    "id": "104b65cd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9999551451125694"
+       "0.9999617707775824"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2135,45 +2144,45 @@
    "source": [
     "# The proportion of houses that have 20_000 indoor_squarefeet and less\n",
     "\n",
-    "houses[houses.indoor_squarefeet <= 20_000].shape[0] / houses.shape[0]"
+    "houses[houses.indoor_sqft <= 20_000].shape[0] / houses.shape[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 134,
    "id": "44345638",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "231945.62822916664"
+       "175444.95500000002"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Mean of tax value of houses corresponding to more than 18_000 sqft\n",
+    "# Mean of tax value of houses corresponding to more than 20_000 sqft\n",
     "\n",
-    "houses[houses.indoor_squarefeet > 20_000].taxamount.mean()"
+    "houses[houses.indoor_sqft > 20_000].tax_amount.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 136,
    "id": "e8deaede",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9998981420264597"
+       "0.9997323954430767"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2181,7 +2190,7 @@
    "source": [
     "# The proportion of houses that have tax value <= 18893736\n",
     "\n",
-    "houses[houses.taxamount <= 231946].shape[0] / houses.shape[0]"
+    "houses[houses.tax_amount <= 175445].shape[0] / houses.shape[0]"
    ]
   },
   {
@@ -2196,7 +2205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 137,
    "id": "636b9c1f",
    "metadata": {
     "scrolled": false
@@ -2223,65 +2232,71 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>bedroomcnt</th>\n",
-       "      <th>bathroomcnt</th>\n",
-       "      <th>indoor_squarefeet</th>\n",
-       "      <th>taxvalue</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>indoor_sqft</th>\n",
+       "      <th>tax_value</th>\n",
        "      <th>yearbuilt</th>\n",
-       "      <th>taxamount</th>\n",
+       "      <th>tax_amount</th>\n",
        "      <th>fips</th>\n",
+       "      <th>sale_date</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3100</td>\n",
+       "      <td>1023282</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>11013.72</td>\n",
+       "      <td>6059</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1465</td>\n",
+       "      <td>464000</td>\n",
+       "      <td>1967</td>\n",
+       "      <td>5672.48</td>\n",
+       "      <td>6111</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1243</td>\n",
+       "      <td>564778</td>\n",
+       "      <td>1962</td>\n",
+       "      <td>6488.30</td>\n",
+       "      <td>6059</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2376</td>\n",
+       "      <td>145143</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>1777.51</td>\n",
+       "      <td>6037</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3633</td>\n",
-       "      <td>296425</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>6941.39</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2962</td>\n",
+       "      <td>773303</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>9516.26</td>\n",
        "      <td>6037</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>3</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1620</td>\n",
-       "      <td>847770</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>10244.94</td>\n",
-       "      <td>6037</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2077</td>\n",
-       "      <td>646760</td>\n",
-       "      <td>1926</td>\n",
-       "      <td>7924.68</td>\n",
-       "      <td>6037</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1200</td>\n",
-       "      <td>5328</td>\n",
-       "      <td>1972</td>\n",
-       "      <td>91.60</td>\n",
-       "      <td>6037</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>171</td>\n",
-       "      <td>6920</td>\n",
-       "      <td>1973</td>\n",
-       "      <td>255.17</td>\n",
-       "      <td>6037</td>\n",
+       "      <td>2017-01-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -2292,93 +2307,99 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2152856</th>\n",
-       "      <td>4</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4375</td>\n",
-       "      <td>422400</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>13877.56</td>\n",
+       "      <th>52437</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1286</td>\n",
+       "      <td>354621</td>\n",
+       "      <td>1940</td>\n",
+       "      <td>4478.43</td>\n",
        "      <td>6037</td>\n",
+       "      <td>2017-09-20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2152858</th>\n",
+       "      <th>52438</th>\n",
        "      <td>4</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2262</td>\n",
-       "      <td>960756</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>13494.52</td>\n",
-       "      <td>6059</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1612</td>\n",
+       "      <td>67205</td>\n",
+       "      <td>1964</td>\n",
+       "      <td>1107.48</td>\n",
+       "      <td>6111</td>\n",
+       "      <td>2017-09-21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2152859</th>\n",
-       "      <td>4</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>3127</td>\n",
-       "      <td>536061</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>6244.16</td>\n",
-       "      <td>6059</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2152861</th>\n",
+       "      <th>52439</th>\n",
        "      <td>3</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>1974</td>\n",
-       "      <td>424353</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>5302.70</td>\n",
-       "      <td>6059</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1032</td>\n",
+       "      <td>49546</td>\n",
+       "      <td>1954</td>\n",
+       "      <td>876.43</td>\n",
+       "      <td>6037</td>\n",
+       "      <td>2017-09-21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2152862</th>\n",
-       "      <td>4</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2110</td>\n",
-       "      <td>554009</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>6761.20</td>\n",
+       "      <th>52440</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1762</td>\n",
+       "      <td>522000</td>\n",
+       "      <td>1955</td>\n",
+       "      <td>6317.15</td>\n",
        "      <td>6037</td>\n",
+       "      <td>2017-09-25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52441</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1050</td>\n",
+       "      <td>259334</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>3345.78</td>\n",
+       "      <td>6037</td>\n",
+       "      <td>2018-05-25</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2139748 rows × 7 columns</p>\n",
+       "<p>52291 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         bedroomcnt  bathroomcnt  indoor_squarefeet  taxvalue  yearbuilt  \\\n",
-       "4                 4          2.0               3633    296425       2005   \n",
-       "6                 3          4.0               1620    847770       2011   \n",
-       "7                 3          2.0               2077    646760       1926   \n",
-       "11                0          0.0               1200      5328       1972   \n",
-       "14                0          0.0                171      6920       1973   \n",
-       "...             ...          ...                ...       ...        ...   \n",
-       "2152856           4          4.0               4375    422400       2015   \n",
-       "2152858           4          3.0               2262    960756       2015   \n",
-       "2152859           4          4.5               3127    536061       2014   \n",
-       "2152861           3          2.5               1974    424353       2015   \n",
-       "2152862           4          4.0               2110    554009       2014   \n",
+       "       bedrooms  bathrooms  indoor_sqft  tax_value  yearbuilt  tax_amount  \\\n",
+       "0             4        3.5         3100    1023282       1998    11013.72   \n",
+       "1             2        1.0         1465     464000       1967     5672.48   \n",
+       "2             3        2.0         1243     564778       1962     6488.30   \n",
+       "3             4        3.0         2376     145143       1970     1777.51   \n",
+       "4             4        3.0         2962     773303       1950     9516.26   \n",
+       "...         ...        ...          ...        ...        ...         ...   \n",
+       "52437         2        2.0         1286     354621       1940     4478.43   \n",
+       "52438         4        2.0         1612      67205       1964     1107.48   \n",
+       "52439         3        1.0         1032      49546       1954      876.43   \n",
+       "52440         3        2.0         1762     522000       1955     6317.15   \n",
+       "52441         3        2.0         1050     259334       1960     3345.78   \n",
        "\n",
-       "         taxamount  fips  \n",
-       "4          6941.39  6037  \n",
-       "6         10244.94  6037  \n",
-       "7          7924.68  6037  \n",
-       "11           91.60  6037  \n",
-       "14          255.17  6037  \n",
-       "...            ...   ...  \n",
-       "2152856   13877.56  6037  \n",
-       "2152858   13494.52  6059  \n",
-       "2152859    6244.16  6059  \n",
-       "2152861    5302.70  6059  \n",
-       "2152862    6761.20  6037  \n",
+       "       fips   sale_date  \n",
+       "0      6059  2017-01-01  \n",
+       "1      6111  2017-01-01  \n",
+       "2      6059  2017-01-01  \n",
+       "3      6037  2017-01-01  \n",
+       "4      6037  2017-01-01  \n",
+       "...     ...         ...  \n",
+       "52437  6037  2017-09-20  \n",
+       "52438  6111  2017-09-21  \n",
+       "52439  6037  2017-09-21  \n",
+       "52440  6037  2017-09-25  \n",
+       "52441  6037  2018-05-25  \n",
        "\n",
-       "[2139748 rows x 7 columns]"
+       "[52291 rows x 8 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2386,7 +2407,7 @@
    "source": [
     "# Filtering the data through number of bedrooms\n",
     "\n",
-    "houses = houses[houses.bedroomcnt <= 8]\n",
+    "houses = houses[houses.bathrooms <= 8]\n",
     "houses"
    ]
   },
